--- a/evm_loader/lib/Cargo.toml
+++ b/evm_loader/lib/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 thiserror = "1.0"
 anyhow = "1.0"
 bincode = "1.3.1"
-evm-loader = { path = "../program", default-features = false, features = ["log", "async-trait", "serde_json"] }
+evm-loader = { path = "../program", default-features = false, features = [
+  "log",
+  "async-trait",
+  "serde_json",
+] }
 solana-sdk = "=1.16.23"
 solana-client = "=1.16.23"
 solana-clap-utils = "=1.16.23"
@@ -17,8 +21,12 @@ solana-cli-config = "=1.16.23"
 solana-cli = "=1.16.23"
 solana-transaction-status = "=1.16.23"
 solana-program-test = "=1.16.23"
-spl-token = { version = "~3.5", default-features = false, features = ["no-entrypoint"] }
-spl-associated-token-account = { version = "~1.1", default-features = false, features = ["no-entrypoint"] }
+spl-token = { version = "~3.5", default-features = false, features = [
+  "no-entrypoint",
+] }
+spl-associated-token-account = { version = "~1.1", default-features = false, features = [
+  "no-entrypoint",
+] }
 bs58 = "0.4.0"
 base64 = "0.21"
 hex = { version = "0.4", features = ["serde"] }
@@ -37,6 +45,16 @@ async-trait = "0.1.73"
 build-info = { version = "0.0.31", features = ["serde"] }
 enum_dispatch = "0.3.12"
 web3 = "0.19.0"
+neon-lib-interface = { path = "../lib-interface" }
+abi_stable = "0.11.2"
+async-ffi = { version = "0.4.1", features = ["abi_stable"] }
+lazy_static = "1.4.0"
+strum = "0.25.0"
+strum_macros = "0.25.3"
+clap = "2.33.3"
 
 [build-dependencies]
 build-info-build = "0.0.31"
+
+[lib]
+crate-type = ["cdylib", "lib"]
