--- a/evm_loader/lib/Cargo.toml
+++ b/evm_loader/lib/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 thiserror = "1.0"
 anyhow = "1.0"
 bincode = "1.3.1"
-evm-loader = { path = "../program", default-features = false, features = ["log", "async-trait", "serde_json"] }
+evm-loader = { path = "../program", default-features = false, features = ["log", "async-trait", "serde_json", "web3"] }
 solana-sdk = "=1.16.23"
 solana-client = "=1.16.23"
 solana-clap-utils = "=1.16.23"
@@ -37,6 +37,9 @@ async-trait = "0.1.73"
 build-info = { version = "0.0.31", features = ["serde"] }
 enum_dispatch = "0.3.12"
 web3 = "0.19.0"
+
+[dev-dependencies]
+map-macro = "0.2.6"
 
 [build-dependencies]
 build-info-build = "0.0.31"
