--- a/evm_loader/program/Cargo.toml
+++ b/evm_loader/program/Cargo.toml
@@ -57,12 +57,14 @@ cfg-if = { version = "1.0" }
 log = { version = "0.4", default-features = false, optional = true }
 maybe-async = "0.2.7"
 async-trait = { version = "0.1.73", optional = true }
+web3 = { version = "0.19.0", optional = true }
 
 [target.'cfg(target_os = "solana")'.dependencies.maybe-async]
 version = "0.2.7"
 features = ["is_sync"]
 
 [dev-dependencies]
+base64 = "0.12.3"
 tokio = { version = "1.0", features = ["full"] }
 
 [lib]
